--- a/draft-pragmatics/pragmatics.html
+++ b/draft-pragmatics/pragmatics.html
@@ -1378,7 +1378,7 @@ li > p:last-of-type {
       <h2 id="name-contributors-2">
 <a href="#name-contributors-2" class="section-name selfRef">Contributors</a>
       </h2>
-<p id="appendix-B-1">Many thanks to Leah Rowe?<a href="#appendix-B-1" class="pilcrow">¶</a></p>
+<p id="appendix-B-1">Many thanks to everyone who has contributed to this document by supplying ideas, correcting typos or spreading the word, including but not limited to DiffieHellman, Leah Rowe, Noisytoot and fluxionary.<a href="#appendix-B-1" class="pilcrow">¶</a></p>
 </section>
 </div>
 <div id="authors-addresses">
