--- a/rfd1/rfd1.html
+++ b/rfd1/rfd1.html
@@ -1200,6 +1200,7 @@ li > p:last-of-type {
 <dl id="identifiers">
 <dt class="label-workgroup">Workgroup:</dt>
 <dd class="workgroup">Free Software Community</dd>
+<dd class="identifier">Request for Discussions: 1</dd>
 <dt class="label-authors">Author:</dt>
 <dd class="authors">
 <div class="author">
