--- a/rfd1/rfd1.html
+++ b/rfd1/rfd1.html
@@ -1198,9 +1198,8 @@ li > p:last-of-type {
 <div id="external-metadata" class="document-information"></div>
 <div id="internal-metadata" class="document-information">
 <dl id="identifiers">
-<dt class="label-workgroup">Workgroup:</dt>
-<dd class="workgroup">Free Software Community</dd>
-<dd class="identifier">Request for Discussions: 1</dd>
+<dt class="label-workgroup">Request for Discussions:</dt>
+<dd class="workgroup">1</dd>
 <dt class="label-authors">Author:</dt>
 <dd class="authors">
 <div class="author">
