--- a/rfd1/rfd1.html
+++ b/rfd1/rfd1.html
@@ -1198,7 +1198,7 @@ li > p:last-of-type {
 <div id="external-metadata" class="document-information"></div>
 <div id="internal-metadata" class="document-information">
 <dl id="identifiers">
-<dt class="label-workgroup">Request for Discussions:</dt>
+<dt class="label-workgroup">RFD:</dt>
 <dd class="workgroup">1</dd>
 <dt class="label-authors">Author:</dt>
 <dd class="authors">
